2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-store.c: Disconnect signals on
	list and contacts when finalizing the store.

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-chat-window.c: Hide VOIP stuff if empathy is
	not compiled with --enable-voip=yes. Fixes bug #482111
	(Sjoerd Simons, Xavier Claessens).

2007-10-01  Xavier Claessens  <xclaesse@gmail.com>

	* megaphone/src/megaphone-applet.c:
	* megaphone/data/GNOME_Megaphone_Applet.schemas.in: Updated to use new
	avatar cache.

2007-09-29  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-group.c: ref group when async calls are in
	flight to avoid destroying the object before receiving the reply.
	* libempathy/empathy-utils.c: Unref the group to not leak it.

2007-09-29  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-contact-factory.c: Refcount
	ContactFactoryAccountData struct.

2007-09-29  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-call-window.c:
	* libempathy-gtk/empathy-call-window.h:
	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-call-window.glade:
	* libempathy-gtk/Makefile.am:
	* libempathy-gtk/empathy-chat-window.c:
	* src/empathy-call-chandler.c:
	* src/empathy-call.chandler:
	* src/org.gnome.Empathy.Call.service.in:
	* src/Makefile.am:
	* libempathy/empathy-utils.c:
	* libempathy/empathy-utils.h:
	* libempathy/empathy-tp-call.c:
	* libempathy/empathy-tp-call.h:
	* libempathy/Makefile.am:
	* libempathy/tp-stream-engine.xml:
	* configure.ac:
	* doc/libempathy-gtk/libempathy-gtk-docs.sgml:
	* doc/libempathy/libempathy.types:
	* doc/libempathy/libempathy-docs.sgml:
	* doc/libempathy/Makefile.am:
	* doc/libempathy/tmpl/empathy-utils.sgml: Initial Voice+Video support
	Fixes bug #468204 (Elliot Fairweather, Xavier Claessens).

2007-09-28  Xavier Claessens  <xclaesse@gmail.com>
